Change parameters into the env variables, incorporate recoded parameters to the process in the main file

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,12 +8,21 @@ params.outdir = "out_dir" */
 // We can also write the pipeline parameters in a different format that is more
 // similar to what we will be using for the rest of the config definitions.
 
-params {
+/* params {
     query = "myquery.fasta"
     dbDir = "/path/to/my/blastDB/"
     dbName = "myBlastDB"
     threads = 16
     outdir = "out_dir"
+} */
+
+params {
+    query = "$PWD/input.fasta"
+    dbDir = "$PWD/DB/"
+    dbName = "blastDB"
+    threads = 2
+    outdir = "out_dir"
+
 }
  
  
