--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,9 @@ params {
     dbName = "blastDB"
     threads = 2
     outdir = "out_dir"
+    outFileName = "input.blastout"
+    options = "-evalue 1e-3"
+    outfmt = "'6'"
 
 }
  
