Set chunkSize parameter to 1. Add timeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,10 +27,13 @@ params {
     outfmt = "'6'"
     app = "blastn"
     help = false
-    chunkSize = 5
+    chunkSize = 1
 }
 
-
+timeline {
+    enabled = true
+    file = "$params.outdir/timeline.html"
+}
  
  
  
