Add Nextflow report

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,10 @@ timeline {
     file = "$params.outdir/timeline.html"
 }
  
- 
+report {
+    enabled = true
+    file = "$params.outdir/report.html"
+}
  
  
  
