Add executor parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,8 +40,11 @@ report {
     file = "$params.outdir/report.html"
 }
  
- 
- 
+executor {
+    queueSize = 100
+    submitRateLimit = '10 sec'
+} 
+//these executor parameters are only active if we choose a non-local executor like slurm or torque
  
  
  
