Add slurm profile that will load different settings

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,5 +46,8 @@ executor {
 } 
 //these executor parameters are only active if we choose a non-local executor like slurm or torque
  
- 
+profiles {
+    slurm { includeConfig './configs/slurm.config'}
+}  
+
  
