--- a/nextflow.config
+++ b/nextflow.config
@@ -50,4 +50,11 @@ profiles {
     slurm { includeConfig './configs/slurm.config'}
 }  
 
- 
+manifest {
+name:'dlysiak/nf_tutorial'
+author: 'Daria Kalinska-Lysiak'
+homePage = 'www.something.org'
+description = 'nextflow bash'
+mainScript = 'main.nf'
+version = '1.0.0'
+} 
