--- a/configs/slurm.config
+++ b/configs/slurm.config
@@ -2,5 +2,6 @@
 
 process {
 	executor = 'slurm'
-	clusterOptions = '-N 1 -n 16 -t 24:00:00'
+	clusterOptions = '-N 1 -n 16 -t 02:00:00'
+	withLabel: blast { module = 'blast-plus' }
 }
