--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,7 @@ params {
     app = "blastn"
     help = false
     chunkSize = 1
+    genome = false
 }
 
 timeline {
@@ -51,10 +52,10 @@ profiles {
 }  
 
 manifest {
-name:'dlysiak/nf_tutorial'
-author: 'Daria Kalinska-Lysiak'
-homePage = 'www.something.org'
-description = 'nextflow bash'
-mainScript = 'main.nf'
-version = '1.0.0'
+    name:'dlysiak/nf_tutorial'
+    author: 'Daria Kalinska-Lysiak'
+    homePage = 'www.something.org'
+    description = 'nextflow bash'
+    mainScript = 'main.nf'
+    version = '1.0.0'
 } 
